--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>BookStore</title>
 	<link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.css">
+<!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.css"> -->
 <!-- <link rel="stylesheet" type="text/css" href="node_modules/angular-ui-grid/ui-grid.min.css"> -->
-<!-- <link rel="stylesheet" type="text/css" href="framework/ng-grid-2.0.12/ng-grid.min.css"> -->
+<link rel="stylesheet" type="text/css" href="framework/ng-grid-2.0.12/ng-grid.min.css">
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
